# Vision-Model-Shelf-Audit-Extract-

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: check_audit_data.py  check_db.py  check_rejections.py  pyproject.toml  pytest.ini  requirements.txt  test_extraction_scenarios.py  test_full_pipeline.py  test_gemini_flash.py  test_judge_fix.py  test_memory_fix.sh  test_openrouter.py
api/src/: auth.py  constants.py  main.py
api/src/agent/: graph.py  state.py
api/src/grounding/: judge.py  matcher.py
api/src/models/: account.py  audit.py  crm.py
api/src/perception/: base.py  detection.py  enhance.py  gemini_gateway.py  guardrail.py  quality.py  vlm.py
api/src/persistence/: db.py  storage.py  writer.py
api/src/routes/: accounts.py  audits.py  auth_routes.py  chat.py  crm.py  dashboard.py  review.py
api/tests/: conftest.py  test_chat.py  test_core.py  test_crm.py  test_detection.py  test_health.py  test_multi_user.py  test_pipeline_e2e.py  test_quality.py
api/tests/integration/: test_pipeline.py
api/tests/unit/: test_guardrail.py  test_judge.py  test_matcher.py  test_vlm.py
db/migrations/: 001_extensions.sql  002_accounts.sql  003_products.sql  004_shelf_audits.sql  005_audit_observations.sql  006_audit_images.sql  007_audit_events.sql  008_guardrail_rejections.sql  009_store_entry_captures.sql  010_views.sql  013_enable_rls.sql  (+3 more)
mobile/: .env.example  app.json  metro.config.js  package-lock.json  package.json
tests/: run_all.py  test_guardrail.py  test_thresholds.py  test_vlm_parse.py
web/: package-lock.json  vite.config.ts
(+37 files in other folders)
