[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kosha-shelf-audit-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "pydantic>=2.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
    "supabase>=2.4.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "rapidfuzz>=3.0.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "pgvector>=0.3.0",
    "python-magic>=0.4.27",
    "python-dotenv>=1.0.0",
    "ultralytics>=8.0.0",  # YOLOv11 for bottle detection (optional via YOLO_ENABLED env var)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
